pods.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    labels:
      pod: pod-1
    name: pod-1
    namespace: default
  spec:
    containers:
    - image: nginx
      name: pod-1
- apiVersion: v1
  kind: Pod
  metadata:
    labels:
      pod: pod-2
    name: pod-2
    namespace: default
  spec:
    containers:
    - image: nginx
      name: pod-2
- apiVersion: v1
  kind: Namespace
  metadata:
    labels:
      kubernetes.io/metadata.name: frontend
      namespace: frontend
    name: frontend
- apiVersion: v1
  kind: Pod
  metadata:
    labels:
      pod: pod-3
    name: pod-3
    namespace: frontend
  spec:
    containers:
    - image: nginx
      name: pod-3
kind: List
