np-egress-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      pod: pod-1
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            pod: pod-2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      pod: pod-2
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            pod: pod-1
